Add initial text

--- a/index.html
+++ b/index.html
@@ -8,5 +8,20 @@
 
 <header id="logo"><img src="megalan.gif"></header>
 
+<div id="content">
+	<div id="intro">
+		<p>
+		This year's edition will take place from the 13th till the 15th of May
+		2016. You can sign up for this spectacular event now for a maximum of
+		&euro;13,37 (exact price to be determined after the event).
+		</p>
+
+		<p>
+		The LAN-party will start on Friday at 18:00. This may be changed at a
+		later date but we'll keep you informed if it does!
+		</p>
+	</div>
+</div>
+
 </body>
 </html>
