Add register button, logos and some more text

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <div id="content">
 	<div id="intro">
+		<h2>Date and pricing</h2>
 		<p>
 		This year's edition will take place from the 13th till the 15th of May
 		2016. You can sign up for this spectacular event now for a maximum of
@@ -20,6 +21,37 @@
 		The LAN-party will start on Friday at 18:00. This may be changed at a
 		later date but we'll keep you informed if it does!
 		</p>
+	</div>
+
+	<div id="register">
+		<a class="register" href="#">Register</a>
+	</div>
+
+	<div id="aboutus">
+		<h2>About us</h2>
+		<p>
+		We're a big team with a broad and diverse set of skills that are
+		especially useful for organising LAN-parties and other such events. We
+		find our origins in four FMNS study associations:
+		</p>
+
+		<div id="logos">
+		<a href="https://www.chemische-binding.nl/">
+			<img src="cb.png" />
+		</a>
+		<a href="https://www.svcover.nl/">
+			<img src="cover.png" />
+		</a>
+		<a href="https://www.fmf.nl/">
+			<img src="fmf2.png" />
+		</a>
+		<a href="https://www.idun.nl/">
+			<img src="idun.png" />
+		</a>
+		<a href="http://www.professorfrancken.nl/wordpress/">
+			<img src="francken.png" />
+		</a>
+		</div>
 	</div>
 </div>
 
