Update some text

--- a/index.html
+++ b/index.html
@@ -25,6 +25,30 @@
 
 	<div id="register">
 		<a class="register" href="#">Register</a>
+		<p>
+		There are only limited spots available, so be quick to register!
+		</p>
+	</div>
+
+	<div id="dontforget">
+		<p>
+		When you plan to attend the LAN, don't forget to bring the following
+		items:
+		</p>
+
+		<ul>
+			<li>Signed copy of the regulations</li>
+			<li>Your computer</li>
+			<li>LAN cable(s)</li>
+			<li>WiFi adapter (only eduroam is available for internet)</li>
+			<li>Headphones (speakers are not allowed)</li>
+			<li>A power strip to power your hardware</li>
+			<li>Other cables to connect your devices</li>
+			<li>Your mouse and keyboard</li>
+			<li>A mouse pad</li>
+			<li>Your games (pre-install Steam games)</li>
+			<li>OS install disk</li>
+		</ul>
 	</div>
 
 	<div id="aboutus">
@@ -32,7 +56,7 @@
 		<p>
 		We're a big team with a broad and diverse set of skills that are
 		especially useful for organising LAN-parties and other such events. We
-		find our origins in four FMNS study associations:
+		find our origins in five FMNS study associations:
 		</p>
 
 		<div id="logos">
