Add links to registration and regulations

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</div>
 
 	<div id="register">
-		<a class="register" href="#">Register</a>
+		<a class="register" href="https://docs.google.com/forms/d/1AVe08k7_PzlnWGPnG7T12on4hbZkJENIb1m5iAnLVbY/viewform">Register</a>
 		<p>
 		There are only limited spots available, so be quick to register!
 		</p>
@@ -37,7 +37,7 @@
 		</p>
 
 		<ul>
-			<li>Signed copy of the regulations</li>
+			<li>Signed copy of the <a href="megalan-rules.pdf">regulations</a></li>
 			<li>Your computer</li>
 			<li>LAN cable(s)</li>
 			<li>WiFi adapter (only eduroam is available for internet)</li>
