Update text according to minutes

--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
 		<p>
 		This year's edition will take place from the 13th till the 15th of May
 		2016. You can sign up for this spectacular event now for a maximum of
-		&euro;13,37 (exact price to be determined after the event).
+		&euro;7,50.
 		</p>
 
 		<p>
 		The LAN-party will start on Friday at 18:00. This may be changed at a
-		later date but we'll keep you informed if it does!
+		later date but we'll keep you informed if it does! On saturday and
+		sunday we will start at 10:00. On friday and saturday we will continue
+		until 03:00, and on sunday we'll stop at 15:00.
 		</p>
 	</div>
 
@@ -56,7 +58,8 @@
 		<p>
 		We're a big team with a broad and diverse set of skills that are
 		especially useful for organising LAN-parties and other such events. We
-		find our origins in five FMNS study associations:
+		find our origins in five FMNS study associations. You can contact us at
+		<a href="mailto:megalan@fmf.nl">megalan@fmf.nl</a>.
 		</p>
 
 		<div id="logos">
