updated text and removed idun link

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 	<div id="intro">
 		<h2>Date and pricing</h2>
 		<p>
-		This year's edition will take place from the 13th till the 15th of May
-		2016. You can sign up for this spectacular event now for a maximum of
+		This year's edition will take place from the 2nd till the 4th of June
+		2017. You can sign up for this spectacular event now for a maximum of
 		&euro;7,50.
 		</p>
 
 		<p>
 		The LAN-party will start on Friday at 18:00. This may be changed at a
-		later date but we'll keep you informed if it does! On saturday and
-		sunday we will start at 10:00. On friday and saturday we will continue
-		until 03:00, and on sunday we'll stop at 15:00.
+		later date but we'll keep you informed if it does! On Saturday and
+		Sunday we will start at 10:00. On Friday and Saturday we will continue
+		until 03:00, and on Sunday we'll stop at 15:00.
 		</p>
 	</div>
 
@@ -58,8 +58,8 @@
 		<p>
 		We're a big team with a broad and diverse set of skills that are
 		especially useful for organising LAN-parties and other such events. We
-		find our origins in five FMNS study associations. You can contact us at
-		<a href="mailto:megalan@fmf.nl">megalan@fmf.nl</a>.
+		find our origins in four FMNS study associations. You can contact us at
+		<a href="mailto:megalan@fmf.nl">megalan.fse@gmail.nl</a>.
 		</p>
 
 		<div id="logos">
@@ -71,9 +71,6 @@
 		</a>
 		<a href="https://www.fmf.nl/">
 			<img src="fmf2.png" />
-		</a>
-		<a href="https://www.idun.nl/">
-			<img src="idun.png" />
 		</a>
 		<a href="http://www.professorfrancken.nl/wordpress/">
 			<img src="francken.png" />
