updated francken logo, price and FMNS is now FSE

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<p>
 		This year's edition will take place from the 2nd till the 4th of June
 		2017. You can sign up for this spectacular event now for a maximum of
-		&euro;7,50.
+		&euro;13,37.
 		</p>
 
 		<p>
@@ -58,7 +58,7 @@
 		<p>
 		We're a big team with a broad and diverse set of skills that are
 		especially useful for organising LAN-parties and other such events. We
-		find our origins in four FMNS study associations. You can contact us at
+		find our origins in four FSE study associations. You can contact us at
 		<a href="mailto:megalan@fmf.nl">megalan.fse@gmail.nl</a>.
 		</p>
 
